# pgextmgrext

./: .gitignore  .gitmodules  Cargo.toml  README.md  custom.sql  plugindb.toml
.github/workflows/: ci.yml
docs/: design.md
framework_pgxs/include/: pgext.h
pgext-cli/: Cargo.toml
pgext-cli/src/: cmd_init.rs  cmd_install.rs  cmd_list.rs  cmd_test.rs  config.rs  download.rs  main.rs  plugin.rs  resolve_pgxs.rs  test_control.rs
pgext-hook-macros/: Cargo.toml
pgext-hook-macros/src/: lib.rs
pgext_framework/: Cargo.toml  pgext_framework.control
pgext_framework/src/: lib.rs
pgext_pg_poop/: Makefile  pgext.h  pgext_pg_poop.c  pgext_pg_poop.control  pgextmgr.h
pgextmgr/: Cargo.toml  bindgen.sh  pgextmgr.control  pgextmgr.h
pgextmgr/src/: api.rs  hook_ext.rs  hook_mgr.rs  hook_pregen.rs  lib.rs  output_rewriter.rs  pgext.rs
pgx_show_hooks/: Cargo.toml  pgx_show_hooks.control  rustfmt.toml
pgx_show_hooks/src/: lib.rs
pgx_trace_hooks/: Cargo.toml  pgx_trace_hooks.control
pgx_trace_hooks/src/: lib.rs
test_plugin/: Makefile  pgext.h  pgext_test_plugin.c
