[package]
name = "pgext-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
console = "0.15.5"
duct = "0.13.6"
num_cpus = "1.15.0"
regex = "1.7.1"
tempfile = "3.4.0"
walkdir = "2.3.2"
toml = "0.7"
serde = { version = "1", features = ["derive"] }
postgres = "0.19.4"
pgext-hook-macros = { path = "../pgext-hook-macros" }
