[package]
name = "pgextmgr"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
pgrx = "0.8"
paste = "1"
pgext-hook-macros = { path = "../pgext-hook-macros" }

[dev-dependencies]
pgrx-tests = "0.8"
