[package]
name = "pgx_show_hooks"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg15 = ["pgx/pg15", "pgx-tests/pg15"]
pg_test = []

[dependencies]
pgx = "=0.7.4"
pgext-hook-macros = { path = "../pgext-hook-macros" }

[dev-dependencies]
pgx-tests = "=0.7.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[patch.crates-io]
pgx-pg-sys = { git = "https://github.com/skyzh/pgx", branch = "skyzh/add-more-hooks" }
